# saqshy

./: .env.example  .env.prod.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  pyproject.toml
.claude/agents/: action-engineer.md  backend-bootstrapper.md  behavior-analyzer-engineer.md  channel-subscription-engineer.md  content-analyzer-engineer.md  db-data-engineer.md  devops-release-engineer.md  docs-support-agent.md  embeddings-spamdb-engineer.md  llm-prompt-engineer.md  message-pipeline-orchestrator.md  miniapp-backend-engineer.md  miniapp-frontend-engineer.md  observability-sre.md  profile-analyzer-engineer.md  qa-test-engineer.md  redis-cache-ratelimit-engineer.md  risk-decision-engineer.md  sandbox-trust-engineer.md  security-engineer.md  tech-lead-architect.md  telegram-bot-engineer.md
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  docker.yml
docker/: .dockerignore  Dockerfile  RELEASE.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml
docker/nginx/: nginx.conf
docker/nginx/ssl/: .gitkeep
docs/: LOCAL_DEVELOPMENT.md
docs/runbooks/: observability.md
mini_app_frontend/: .eslintrc.cjs  .gitignore  .prettierignore  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
mini_app_frontend/e2e/: review-queue.spec.ts  settings.spec.ts  stats.spec.ts
mini_app_frontend/e2e/fixtures/: telegram.ts
mini_app_frontend/src/: App.tsx  main.tsx
mini_app_frontend/src/api/: client.ts
mini_app_frontend/src/api/__tests__/: client.test.ts
mini_app_frontend/src/components/: ErrorBoundary.tsx  GroupTypeSelector.tsx  LoadingSpinner.tsx  OfflineBanner.tsx  PullToRefresh.tsx  ReviewQueue.tsx  SettingsForm.tsx  StatsCard.tsx  Toast.tsx  index.ts
mini_app_frontend/src/components/skeletons/: ReviewItemSkeleton.tsx  SettingsSkeleton.tsx  Skeleton.tsx  StatsSkeleton.tsx  index.ts
mini_app_frontend/src/hooks/: index.ts  useBackButton.ts  useMainButton.ts  useTelegram.ts  useToast.ts  useViewport.ts
mini_app_frontend/src/hooks/__tests__/: useTelegram.test.ts
mini_app_frontend/src/hooks/mutations/: index.ts  useReviewAction.ts  useUpdateSettings.ts
mini_app_frontend/src/hooks/queries/: index.ts  useGroupSettings.ts  useGroupStats.ts  useReviews.ts
mini_app_frontend/src/lib/: queryClient.ts
mini_app_frontend/src/pages/: GroupSettingsPage.tsx  GroupStatsPage.tsx  ReviewQueuePage.tsx  index.ts
mini_app_frontend/src/stores/: appStore.ts  index.ts  uiStore.ts
mini_app_frontend/src/stores/__tests__/: appStore.test.ts  uiStore.test.ts
mini_app_frontend/src/styles/: animations.css  base.css  components.css  global.css  index.css  pages.css
mini_app_frontend/src/test/: setup.ts
mini_app_frontend/src/types/: index.ts
mini_app_frontend/tests/e2e/: global-setup.ts  navigation.spec.ts  review-queue.spec.ts  settings.spec.ts  stats.spec.ts
mini_app_frontend/tests/fixtures/: telegram-mock.ts
scripts/: health_check.py  init_db.py  run_local_tests.py  run_miniapp_local.py  seed_spam_db.py
src/saqshy/: __init__.py  __main__.py  app.py  config.py
src/saqshy/analyzers/: __init__.py  behavior.py  content.py  profile.py  signals.py
src/saqshy/api/: __init__.py  health.py
src/saqshy/bot/: __init__.py  action_engine.py  bot.py  pipeline.py
src/saqshy/core/: __init__.py  audit.py  constants.py  log_facade.py  logging.py  metrics.py  protocols.py  risk_calculator.py  sandbox.py  security.py  types.py
src/saqshy/db/: __init__.py  database.py  models.py
src/saqshy/mini_app/: __init__.py  auth.py  handlers.py  routes.py  schemas.py
src/saqshy/services/: __init__.py  cache.py  channel_subscription.py  container.py  embeddings.py  llm.py  network.py  spam_db.py  structlog_adapter.py
src/saqshy/utils/: __init__.py  telegram.py  text.py  url.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  database.py  miniapp_auth.py  scenarios.py  services.py  telegram_mocks.py
tests/integration/: __init__.py  test_channel_subscription.py  test_deals_group_scenarios.py  test_risk_scoring_scenarios.py  test_spam_db_matching.py
tests/integration/test_mini_app/: __init__.py  test_api_endpoints.py  test_channel_validation.py
tests/integration/test_repositories/: __init__.py  test_decisions.py  test_group_members.py  test_groups.py  test_users.py
tests/load/: __init__.py  conftest.py  test_spam_attack.py
tests/security/: __init__.py  test_abuse_patterns.py  test_injection.py  test_mini_app_security.py  test_prompt_injection.py  test_webhook_auth.py
tests/unit/: __init__.py  test_action_engine.py  test_action_engine_fixes.py  test_api_health.py  test_behavior_analyzer.py  test_cache_service.py  test_channel_subscription.py  test_container.py  test_content_analyzer.py  test_embeddings_service.py  test_immutable_state.py  test_input_validation.py  test_llm_service.py  test_network_analyzer.py  test_pipeline_backpressure.py  test_production_fixes.py  test_profile_analyzer.py  test_protocols.py  test_risk_calculator.py  test_sandbox.py  test_signal_cache.py  test_trust_adjustments.py
tests/unit/test_handlers/: __init__.py  test_callbacks.py  test_commands.py  test_members.py  test_messages.py
tests/unit/test_middlewares/: __init__.py  test_auth.py  test_config.py  test_error.py  test_logging.py  test_rate_limit.py
(+25 files in other folders)
