[project]
name = "saqshy-bot"
version = "2.0.0"
description = "AI-powered Telegram anti-spam bot using Cumulative Risk Score architecture"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "SAQSHY Team"}
]
keywords = ["telegram", "bot", "anti-spam", "ai", "moderation"]

dependencies = [
    "aiogram>=3.23.0",
    "aiohttp>=3.9.0",
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "redis>=5.2.0",
    "qdrant-client>=1.12.0",
    "anthropic>=0.75.0",
    "cohere>=5.13.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "httpx>=0.28.0",
    "python-jose>=3.3.0",
    "cryptography>=44.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "types-redis>=4.6.0",
]

[project.scripts]
saqshy = "saqshy.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/saqshy"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["saqshy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (may require database/redis)",
    "security: Security-focused tests",
    "slow: Slow running tests",
    "load: Load and stress tests for performance validation",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "qdrant_client.*",
    "cohere.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/saqshy"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
